# molecular_dynamics_playtest

./: .gitignore  Atom.h  AtomAnimator.h  AtomGenerator.h  AtomInteractorStyle.cpp  CMakeLists.txt  Launcher.cpp  Launcher.h  MDMainWindow.h  MDVisualiser.cpp  MDVisualiser.h  Material.h  README.md  Settings.h  Simulation.h  SimulationConfig.h  SimulationData.h  SimulationHistory.h  Type_atom.h  animate_atoms.h  chin_md.c  copper_block_generator.cpp  design_doc.md  file_functions.h  generate_atoms.h  generate_block.h  goals.txt  main.cpp  md_driver.cpp  md_driver.h  original_all_to_all.cpp  program_guide.md  simulation.h  string_functions.h  test_generate_block.cpp  to_add.md  visualise_md.cpp  visualiser.cpp
atoms/: Atom.h  AtomColor.h  AtomPairData.h  AtomPairLibrary.h  Structure.cpp  Structure.h  atom_generation_functions.cpp  atom_generation_functions.h
debug/: logging.cpp  logging.h
dev_scripts/: add_config_parsing.py
geometry/: Box.h  Plane.h  StructureGeometry.h  Vector.h  geometry.h  geometry_functions.cpp  geometry_functions.h
graphs/: EnergyGraphWidget.cpp  EnergyGraphWidget.h  KineticEnergyHistogramWidget.cpp  KineticEnergyHistogramWidget.h
physics/: TotalEnergy.h  physics_functions.h
reports/: December.txt  January.txt
simulation/: Atom.h  AtomPairData.h  AtomPairLibrary.h  AtomPairer.h  AtomVTKWidget.h  Box.h  BoxCornerAtoms.h  Config.h  DomainDecompositionAtomPairer.h  EnergyApplier.h  EnergyTracker.h  FCCGenerator.h  ForceEvaluator.h  GeometryAnalyser.h  IDAssigner.h  InitialConfig.h  InitialParameters.h  InitialiserDialog.h  InteractionEvaluator.h  KineticEnergyApplier.h  KineticEnergyCalculator.h  MDSimulator.h  MainWindow.h  MotionCalculator.h  Plane.h  PlaybackManager.h  PositionUpdater.h  PotentialEnergyCalculator.h  SimulationDataChannels.h  SimulationTimeline.h  Structure.h  StructureAnalyser.h  StructureList.cpp  StructureList.h  Timestep.h  TotalEnergy.h  UnitVector.h  UnitVectorCalculator.h  Vector.h  VelocityUpdater.h  (+7 more)
simulation/geometry/: Plane.h
src/: main.cpp
src/atoms/: Atom.cpp  Atom.h  AtomPairData.cpp  AtomPairData.h  AtomPairLibrary.cpp  AtomPairLibrary.h  Structure.cpp  Structure.h  atom_generation_functions.cpp  atom_generation_functions.h
src/debug/: logging.cpp
src/geometry/: Box.cpp  Box.h  Plane.cpp  Plane.h  Vector.cpp  Vector.h  geometry_functions.cpp  geometry_functions.h
src/graphs/: EnergyGraphWidget.cpp  KineticEnergyHistogramWidget.cpp  KineticEnergyHistogramWidget.h
src/physics/: physics_functions.h
src/simulation/: Config.cpp  Config.h  StructureList.cpp  StructureList.h  Timestep.cpp  Timestep.h  simulation_functions.h
src/ui/: Color.h  PlaybackSettings.h  SharedData.h  visualisation_functions.h
src/ui/atom_management_widgets/: AtomManager.cpp  AtomManager.h  AtomVTKPreview.cpp  AtomVTKPreview.h  NewStructureDialog.cpp  NewStructureDialog.h  StructureListViewer.cpp  StructureListViewer.h
src/ui/data_loaders/: BasicDataLoader.cpp  BasicDataLoader.h  DataLoader.h
src/ui/main_visualiser_widgets/: MDVisualiser.cpp  MDVisualiser.h
src/ui/simulation_management_widgets/: SimulationSettingsDialogue.h
tests/atom_management/: CMakeLists.txt  test_atom_management_features.cpp
tests/basic_ui_launch/: CMakeLists.txt  test_basic_ui_launch.cpp
tests/simulation_runs/: CMakeLists.txt  test_simulation_runs.cpp
tutorials/basic_simulation/: tutorial_1.cpp
tutorials/basic_simulation/tutorial_1/: CMakeLists.txt  CMakeLists_vcpkg.txt  tut_1  tutorial_1.cpp  tutorial_2.cpp  tutorial_3.cpp  tutorial_4.cpp  tutorial_5.cpp  tutorial_6.cpp  vcpkg.json
tutorials/basic_simulation/tutorial_2/: tutorial_2.cpp
tutorials/basic_simulation/tutorial_3/: tutorial_3.cpp
tutorials/basic_simulation/tutorial_4/: tutorial_4.cpp
tutorials/basic_simulation/tutorial_5/: tutorial_5.cpp
tutorials/basic_simulation/tutorial_6/: tutorial_6.cpp
tutorials/ui/: initisialiser_dialogue.cpp  restart_simulation.cpp
tutorials/ui/initialiser_dialogue/: CMakeLists.txt  initialiser_dialogue.cpp  vcpkg.json
tutorials/ui/restart_simulation/: CMakeLists.txt  restart_simulation.cpp
ui/: AtomInteractorStyle.h  AtomPropertiesWidget.cpp  AtomPropertiesWidget.h  AtomVTKWidget.cpp  AtomVTKWidget.h  Color.h  InitialiserDialog.cpp  InitialiserDialog.h  MDSimulator.h  MDVisualiser.cpp  MDVisualiser.h  MainWindow.cpp  MainWindow.h  PlaybackManager.h  PlaybackSettings.h  SharedData.cpp  SharedData.h  SimulationLauncher.h  SimulationSettingsDialogue.cpp  settings_functions.cpp  settings_functions.h  visualisation_functions.cpp  visualisation_functions.h
ui/atom_management_widgets/: AtomEditorDialogue.cpp  AtomEditorDialogue.h  AtomManager.cpp  AtomManager.h  AtomStructureInserter.cpp  AtomStructureInserter.h  AtomStructureVTKPreview.cpp  AtomStructureVTKPreview.h  AtomVTKPreview.cpp  AtomVTKPreview.h  NewStructureDialog.cpp  NewStructureDialog.h  StructureListViewer.cpp  StructureListViewer.h
ui/data_loaders/: BasicDataLoader.cpp  BasicDataLoader.h  DataLoader.h
ui/main_visualiser_widgets/: AtomVTKWidget.cpp  MDVisualiser.h
